@@ -58,7 +58,7 @@ has 'storage_attributes'       => is => 'ro', isa => 'HashRef',
    default                     => sub { {} };
 has 'storage_base'             => is => 'ro', isa => 'ClassName',
    default                     => q(File::DataClass::Storage);
-has 'storage_class'            => is => 'ro', isa => 'Str',
+has 'storage_class'            => is => 'rw', isa => 'Str',
    default                     => q(XML::Simple);
 has 'storage'                  => is => 'rw', isa => 'Object',
    lazy_build                  => TRUE;
