@@ -1,5 +1,6 @@
 Revision history for File::DataClass
 
+         - Added Gettext for mo files (read-only)
          - Fixed the way ResultSource::WithLanguage patches in storage object
          - Added Gettext for po files
          - Eliminated Exception_Class class attribute
